--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.9",
+    "graphql": "^16.3.0",
     "intersection-observer": "^0.12.0",
     "react": "^17.0.2",
+    "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "styled-components": "^5.3.3"
