--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "standard",
     "build": "webpack",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server --history-api-fallback"
   },
   "repository": {
     "type": "git",
@@ -40,6 +40,7 @@
     "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.1",
     "styled-components": "^5.3.3"
   },
   "standard": {
